<resources>
    <string name="app_name">HomeWorkOne</string>
    <string name="look_weather">Look weather</string>
    <string name="choose_your_params">Choose your params</string>
    <string name="saint_petersburg">Saint-Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="london">London</string>
    <string name="barcelona">Barcelona</string>
    <string name="porto">Porto</string>
    <string name="prague">Prague</string>
    <string name="helsinki">Helsinki</string>
    <string name="look_weather_now">LOOK WEATHER NOW</string>
    <string name="city_name">City name</string>
    <string name="another">Another</string>
    <string name="pressed">Pressed</string>
    <string name="show_pressed">Show pressed</string>
    <string name="show_wind">Show wind</string>
    <string name="choose_your_city">choose your city</string>
    <string name="refresh">Refresh</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="about_city">About city</string>
    <string name="events">Events</string>
    <string name="about_developer">About developer</string>
    <string name="gurevich_pavel_student_of_geek_brains">Gurevich Pavel, Student of Geek Brains</string>
    <string name="todo">TODO</string>
</resources>
