<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_your_params"
    android:paddingLeft="60dp"
    android:textSize="32dp"
    android:textStyle="bold"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_city"
            android:queryHint="choose your city"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/saint_petersburg"
            android:textSize="16sp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/moscow"
            android:textSize="16sp" />


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/helsinki"
            android:textSize="16sp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/another"
            android:textSize="16sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="40dp">

            <RadioButton
                android:id="@+id/show_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pressed" />

            <RadioButton
                android:id="@+id/show_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_wind" />


        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_weather_now"
        android:textStyle="bold"/>


</LinearLayout>