<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowWeather">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/city_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textPersonName"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/temperature_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <EditText
        android:id="@+id/text_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPersonName"
        android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pressure_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <EditText
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textPersonName"
            android:text="" />
    </TableRow>




    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>